read all bytes instead of string to assure linebreaks are handled correctly across platforms